src/static/css/templates/_albums-index.scss
@use 'sass:math';
@use '../tokens';

@include tokens.textStyles;
@include tokens.headingStyles;
@include tokens.placeholders;

.page--albums {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.album-groups-list {
  max-width: tokens.$categoryWidth;
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: calc(1.2 * var(--type-0));
}

.album-group {
}

.album-group__title {
  @extend %heading--6;
  display: inline-block;
  line-height: tokens.$gapSmall;
}

.album-group__albums-list {
  display: inline;
  font-size: var(--type-0);
  line-height: 1.5em;
  @extend %font--text-regular;
}

.album-group__album {
  white-space: nowrap;
  display: inline;
}

.album-group__album__link {
  // color: var(--contentSecondaryColor);
  position: relative;
  text-decoration: none;
  &::after {
    background-color: var(--linkUnderlineColor);
    content: "";
    z-index: -1;
    height: 1px;
    inset: auto 0 0 0;
    position: absolute;
    transition: background-color .2s ease-out,transform .2s ease-out;
  }
  &:hover {
    & + .album-preview {
      @include tokens.light-dark(opacity, 0.33, 0.5);
      @include tokens.light-dark(mix-blend-mode, multiply, screen);
    }
    & + .album-preview img {
      filter: blur(0);
      transform: scale(1);
      & {
        transition-duration: tokens.$x4;
      }
    }
    &::after {
      transform: translateY(2px);
      background-color: var(--materialPrimaryInvertedColor);
    }
  }
}

.album-preview {
  $halfCol: calc(var(--col)/2);
  & {
    z-index: -10;
    display: grid;
    place-items: center;
    pointer-events: none;
    position: fixed;
    width: auto;
    inset: $halfCol;
    justify-content: center;
    opacity: 0;
  }
  picture {
    & {
      display: contents;
    }
    img {
      height: auto;
      width: auto;
      max-height: 100%;
      max-width: 100%;
      position: absolute;
      filter: blur(.6em);
      transform: scale(0.9875);
      transition: tokens.$x opacity ease-out, tokens.$x filter ease-out, tokens.$x transform ease-out;
    }
  }
}

